--- a/Rating Demo/Rating Demo/Base.lproj/Main.storyboard
+++ b/Rating Demo/Rating Demo/Base.lproj/Main.storyboard
@@ -85,13 +85,26 @@
                                 </connections>
                             </segmentedControl>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UnK-79-f6C">
-                                <rect key="frame" x="168" y="339" width="51" height="31"/>
+                                <rect key="frame" x="168.5" y="339" width="51" height="31"/>
                                 <connections>
                                     <action selector="bouncySwitchChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Kf4-py-QyB"/>
                                 </connections>
                             </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable bounciness:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yja-dz-5hP">
-                                <rect key="frame" x="12" y="344" width="148" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bounce animation:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yja-dz-5hP">
+                                <rect key="frame" x="18.5" y="344" width="142" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="wp7-GB-QRJ">
+                                <rect key="frame" x="168.5" y="373" width="51" height="31"/>
+                                <connections>
+                                    <action selector="bouncySwitchChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="beZ-H2-E70"/>
+                                    <action selector="hapticFeedbackSwitchChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="8cA-Ki-fac"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Haptic feedback:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yr5-kZ-byo">
+                                <rect key="frame" x="29.5" y="378" width="131" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -110,12 +123,16 @@
                             <constraint firstItem="nH0-To-tP5" firstAttribute="top" secondItem="gBb-xE-SV5" secondAttribute="bottom" multiplier="1.1" constant="8" symbolic="YES" id="WBi-0z-7Xt"/>
                             <constraint firstItem="Fmp-IB-18A" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="XJ9-fs-ydL"/>
                             <constraint firstItem="gBb-xE-SV5" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" multiplier="2/3" id="cCT-rx-HVA"/>
+                            <constraint firstItem="Yr5-kZ-byo" firstAttribute="top" secondItem="yja-dz-5hP" secondAttribute="bottom" constant="13" id="dl1-PD-saJ"/>
                             <constraint firstItem="WOu-Kg-Xd8" firstAttribute="top" secondItem="MIn-fz-guV" secondAttribute="bottom" multiplier="1.5" constant="8" symbolic="YES" id="dtF-N7-OfC"/>
                             <constraint firstItem="lfK-LJ-vUZ" firstAttribute="leading" secondItem="o9T-8V-Y0b" secondAttribute="leading" id="egU-qB-aoN"/>
                             <constraint firstItem="nH0-To-tP5" firstAttribute="trailing" secondItem="Fmp-IB-18A" secondAttribute="trailing" id="kcN-t1-bo4"/>
+                            <constraint firstItem="wp7-GB-QRJ" firstAttribute="leading" secondItem="Yr5-kZ-byo" secondAttribute="trailing" constant="8" id="oNP-W4-og9"/>
+                            <constraint firstItem="wp7-GB-QRJ" firstAttribute="centerY" secondItem="Yr5-kZ-byo" secondAttribute="centerY" id="omJ-Oc-ZNm"/>
                             <constraint firstItem="o9T-8V-Y0b" firstAttribute="leading" secondItem="Fmp-IB-18A" secondAttribute="trailing" constant="8" symbolic="YES" id="qpk-wg-Yhd"/>
                             <constraint firstItem="gBb-xE-SV5" firstAttribute="top" secondItem="WOu-Kg-Xd8" secondAttribute="bottom" multiplier="1.1" constant="8" symbolic="YES" id="rmy-NN-WLa"/>
                             <constraint firstItem="WOu-Kg-Xd8" firstAttribute="trailing" secondItem="gBb-xE-SV5" secondAttribute="trailing" id="v6k-jU-whr"/>
+                            <constraint firstItem="Yr5-kZ-byo" firstAttribute="trailing" secondItem="yja-dz-5hP" secondAttribute="trailing" id="vIa-EM-kW8"/>
                             <constraint firstItem="Fmp-IB-18A" firstAttribute="top" secondItem="nH0-To-tP5" secondAttribute="bottom" constant="8" symbolic="YES" id="wd2-bK-XQO"/>
                             <constraint firstItem="o9T-8V-Y0b" firstAttribute="centerY" secondItem="Fmp-IB-18A" secondAttribute="centerY" id="yqm-D4-tbp"/>
                             <constraint firstItem="yja-dz-5hP" firstAttribute="top" secondItem="Fmp-IB-18A" secondAttribute="bottom" constant="18.5" id="yyB-uM-6xM"/>
@@ -130,6 +147,8 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="floatRatingView" destination="gBb-xE-SV5" id="0eS-2F-i06"/>
+                        <outlet property="hapticFeedbackLabel" destination="Yr5-kZ-byo" id="Oaj-QO-1mY"/>
+                        <outlet property="hapticFeedbackSwitch" destination="wp7-GB-QRJ" id="hXX-g2-LWF"/>
                         <outlet property="liveLabel" destination="lfK-LJ-vUZ" id="wKr-PP-3KJ"/>
                         <outlet property="ratingSegmentedControl" destination="WOu-Kg-Xd8" id="tGy-gw-CHm"/>
                         <outlet property="updatedLabel" destination="o9T-8V-Y0b" id="frW-so-Sun"/>
